@@ -1,18 +1,22 @@
-
 ThisBuild / version := "0.1.0-SNAPSHOT"
 
 ThisBuild / scalaVersion := "2.12.15"
 
 lazy val root = (project in file("."))
   .settings(
-    name := "Practica"
+    name := "Practica",
+    fork := true,
+    javaOptions ++= Seq(
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    )
   )
 
 libraryDependencies ++= Seq(
-
-  "org.scalatest" %% "scalatest" % "3.0.8" % Test,
+  "org.scalatest" %% "scalatest" % "3.2.15" % Test,
   "org.apache.spark" %% "spark-core" % "3.2.4",
   "org.apache.spark" %% "spark-sql" % "3.2.4",
   "org.apache.spark" %% "spark-hive" % "3.4.0"
-
 )
